Add: assign role to RegisterFlow
Add: public_certificate_path

Add: doc for new func
